LP: #1859049 - Use linux-* instead of linux-signed-* kernel packages.
linux-signed-* packages are now metapackages in 14.04+. The linux-signed-*
metapackage has been removed from 20.04+. Use linux-* packages as they are
signed.

--- a/conf/meph-v3.yaml
+++ b/conf/meph-v3.yaml
@@ -64,8 +64,8 @@ releases:
  - version: "20.04"
    release: focal
    kernels:
-    - [focal,       amd64,    ga-20.04,        generic,     linux-signed-generic,                 *sa_hwe_ff]
-    - [focal,       amd64,    ga-20.04,        lowlatency,  linux-signed-image-lowlatency,        *sa_hwe_ff]
+    - [focal,       amd64,    ga-20.04,        generic,     linux-generic,                        *sa_hwe_ff]
+    - [focal,       amd64,    ga-20.04,        lowlatency,  linux-image-lowlatency,               *sa_hwe_ff]
     - [focal,       arm64,    ga-20.04,        generic,     linux-generic,                        *sa_hwe_ff]
     - [focal,       arm64,    *mustang,        generic,     linux-generic,                        [*mustang], *kh-mustang]
     - [focal,       arm64,    *xguboot,        generic,     linux-generic,                        [*xguboot], *kh-xgene]
@@ -78,8 +78,8 @@ releases:
  - version: "19.10"
    release: eoan
    kernels:
-    - [eoan,       amd64,    ga-19.10,        generic,     linux-signed-generic,                 *sa_hwe_ee]
-    - [eoan,       amd64,    ga-19.10,        lowlatency,  linux-signed-image-lowlatency,        *sa_hwe_ee]
+    - [eoan,       amd64,    ga-19.10,        generic,     linux-generic,                        *sa_hwe_ee]
+    - [eoan,       amd64,    ga-19.10,        lowlatency,  linux-image-lowlatency,               *sa_hwe_ee]
     - [eoan,       arm64,    ga-19.10,        generic,     linux-generic,                        *sa_hwe_ee]
     - [eoan,       arm64,    *mustang,        generic,     linux-generic,                        [*mustang], *kh-mustang]
     - [eoan,       arm64,    *xguboot,        generic,     linux-generic,                        [*xguboot], *kh-xgene]
@@ -92,8 +92,8 @@ releases:
  - version: "19.04"
    release: disco
    kernels:
-    - [disco,      amd64,    ga-19.04,        generic,     linux-signed-generic,                 *sa_hwe_dd]
-    - [disco,      amd64,    ga-19.04,        lowlatency,  linux-signed-image-lowlatency,        *sa_hwe_dd]
+    - [disco,      amd64,    ga-19.04,        generic,     linux-generic,                        *sa_hwe_dd]
+    - [disco,      amd64,    ga-19.04,        lowlatency,  linux-image-lowlatency,               *sa_hwe_dd]
     - [disco,      arm64,    ga-19.04,        generic,     linux-generic,                        *sa_hwe_dd]
     - [disco,      arm64,    *mustang,        generic,     linux-generic,                        [*mustang], *kh-mustang]
     - [disco,      arm64,    *xguboot,        generic,     linux-generic,                        [*xguboot], *kh-xgene]
@@ -106,42 +106,42 @@ releases:
  - version: "18.04"
    release: bionic
    kernels:
-    - [bionic,     amd64,    ga-18.04,        generic,     linux-signed-generic,                        *sa_hwe_b]
-    - [bionic,     amd64,    ga-18.04,        lowlatency,  linux-signed-lowlatency,                     *sa_hwe_b]
-    - [bionic,     amd64,    hwe-18.04,       generic,     linux-signed-generic-hwe-18.04,              *sa_hwe_b]
-    - [bionic,     amd64,    hwe-18.04,       lowlatency,  linux-signed-lowlatency-hwe-18.04,           *sa_hwe_b]
-    - [bionic,     amd64,    hwe-18.04-edge,  generic,     linux-signed-generic-hwe-18.04-edge,         *sa_hwe_b_edge]
-    - [bionic,     amd64,    hwe-18.04-edge,  lowlatency,  linux-signed-lowlatency-hwe-18.04-edge,      *sa_hwe_b_edge]
-    - [bionic,     arm64,    ga-18.04,        generic,     linux-generic,                               *sa_hwe_b]
-    - [bionic,     arm64,    hwe-18.04,       generic,     linux-generic-hwe-18.04,                     *sa_hwe_b]
-    - [bionic,     arm64,    hwe-18.04-edge,  generic,     linux-generic-hwe-18.04-edge,                *sa_hwe_b_edge]
-    - [bionic,     arm64,    *mustang,        generic,     linux-generic,                               [*mustang], *kh-mustang]
-    - [bionic,     arm64,    *xguboot,        generic,     linux-generic,                               [*xguboot], *kh-xgene]
-    - [bionic,     armhf,    *glpae,          *glpae,      linux-generic-lpae,                          [*glpae]]
-    - [bionic,     armhf,    ga-18.04,        generic,     linux-generic,                               *arm_hwe_b]
-    - [bionic,     armhf,    hwe-18.04,       generic,     linux-generic-hwe-18.04,                     *arm_hwe_b]
-    - [bionic,     armhf,    hwe-18.04-edge,  generic,     linux-generic-hwe-18.04-edge,                *arm_hwe_b_edge]
-    - [bionic,     i386,     ga-18.04,        generic,     linux-generic,                               *sa_hwe_b]
-    - [bionic,     i386,     ga-18.04,        lowlatency,  linux-lowlatency,                            *sa_hwe_b]
-    - [bionic,     i386,     hwe-18.04,       generic,     linux-generic-hwe-18.04,                     *sa_hwe_b]
-    - [bionic,     i386,     hwe-18.04,       lowlatency,  linux-lowlatency-hwe-18.04,                  *sa_hwe_b]
-    - [bionic,     i386,     hwe-18.04-edge,  generic,     linux-generic-hwe-18.04-edge,                *sa_hwe_b_edge]
-    - [bionic,     i386,     hwe-18.04-edge,  lowlatency,  linux-lowlatency-hwe-18.04-edge,             *sa_hwe_b_edge]
-    - [bionic,     ppc64el,  ga-18.04,        generic,     linux-generic,                               *sa_hwe_b]
-    - [bionic,     ppc64el,  hwe-18.04,       generic,     linux-generic-hwe-18.04,                     *sa_hwe_b]
-    - [bionic,     ppc64el,  hwe-18.04-edge,  generic,     linux-generic-hwe-18.04-edge,                *sa_hwe_b_edge]
-    - [bionic,     s390x,    ga-18.04,        generic,     linux-generic,                               *sa_hwe_b]
-    - [bionic,     s390x,    hwe-18.04,       generic,     linux-generic-hwe-18.04,                     *sa_hwe_b]
-    - [bionic,     s390x,    hwe-18.04-edge,  generic,     linux-generic-hwe-18.04-edge,                *sa_hwe_b_edge]
+    - [bionic,     amd64,    ga-18.04,        generic,     linux-generic,                        *sa_hwe_b]
+    - [bionic,     amd64,    ga-18.04,        lowlatency,  linux-lowlatency,                     *sa_hwe_b]
+    - [bionic,     amd64,    hwe-18.04,       generic,     linux-generic-hwe-18.04,              *sa_hwe_b]
+    - [bionic,     amd64,    hwe-18.04,       lowlatency,  linux-lowlatency-hwe-18.04,           *sa_hwe_b]
+    - [bionic,     amd64,    hwe-18.04-edge,  generic,     linux-generic-hwe-18.04-edge,         *sa_hwe_b_edge]
+    - [bionic,     amd64,    hwe-18.04-edge,  lowlatency,  linux-lowlatency-hwe-18.04-edge,      *sa_hwe_b_edge]
+    - [bionic,     arm64,    ga-18.04,        generic,     linux-generic,                        *sa_hwe_b]
+    - [bionic,     arm64,    hwe-18.04,       generic,     linux-generic-hwe-18.04,              *sa_hwe_b]
+    - [bionic,     arm64,    hwe-18.04-edge,  generic,     linux-generic-hwe-18.04-edge,         *sa_hwe_b_edge]
+    - [bionic,     arm64,    *mustang,        generic,     linux-generic,                        [*mustang], *kh-mustang]
+    - [bionic,     arm64,    *xguboot,        generic,     linux-generic,                        [*xguboot], *kh-xgene]
+    - [bionic,     armhf,    *glpae,          *glpae,      linux-generic-lpae,                   [*glpae]]
+    - [bionic,     armhf,    ga-18.04,        generic,     linux-generic,                        *arm_hwe_b]
+    - [bionic,     armhf,    hwe-18.04,       generic,     linux-generic-hwe-18.04,              *arm_hwe_b]
+    - [bionic,     armhf,    hwe-18.04-edge,  generic,     linux-generic-hwe-18.04-edge,         *arm_hwe_b_edge]
+    - [bionic,     i386,     ga-18.04,        generic,     linux-generic,                        *sa_hwe_b]
+    - [bionic,     i386,     ga-18.04,        lowlatency,  linux-lowlatency,                     *sa_hwe_b]
+    - [bionic,     i386,     hwe-18.04,       generic,     linux-generic-hwe-18.04,              *sa_hwe_b]
+    - [bionic,     i386,     hwe-18.04,       lowlatency,  linux-lowlatency-hwe-18.04,           *sa_hwe_b]
+    - [bionic,     i386,     hwe-18.04-edge,  generic,     linux-generic-hwe-18.04-edge,         *sa_hwe_b_edge]
+    - [bionic,     i386,     hwe-18.04-edge,  lowlatency,  linux-lowlatency-hwe-18.04-edge,      *sa_hwe_b_edge]
+    - [bionic,     ppc64el,  ga-18.04,        generic,     linux-generic,                        *sa_hwe_b]
+    - [bionic,     ppc64el,  hwe-18.04,       generic,     linux-generic-hwe-18.04,              *sa_hwe_b]
+    - [bionic,     ppc64el,  hwe-18.04-edge,  generic,     linux-generic-hwe-18.04-edge,         *sa_hwe_b_edge]
+    - [bionic,     s390x,    ga-18.04,        generic,     linux-generic,                        *sa_hwe_b]
+    - [bionic,     s390x,    hwe-18.04,       generic,     linux-generic-hwe-18.04,              *sa_hwe_b]
+    - [bionic,     s390x,    hwe-18.04-edge,  generic,     linux-generic-hwe-18.04-edge,         *sa_hwe_b_edge]
  - version: "16.04"
    release: xenial
    kernels:
-    - [xenial,     amd64,    ga-16.04,        generic,     linux-signed-generic,                        *sa_hwe_x]
-    - [xenial,     amd64,    ga-16.04,        lowlatency,  linux-signed-lowlatency,                     *sa_hwe_x]
-    - [xenial,     amd64,    hwe-16.04,       generic,     linux-signed-generic-hwe-16.04,              *sa_hwe_x]
-    - [xenial,     amd64,    hwe-16.04,       lowlatency,  linux-signed-lowlatency-hwe-16.04,           *sa_hwe_x]
-    - [xenial,     amd64,    hwe-16.04-edge,  generic,     linux-signed-generic-hwe-16.04-edge,         *sa_hwe_x_edge]
-    - [xenial,     amd64,    hwe-16.04-edge,  lowlatency,  linux-signed-lowlatency-hwe-16.04-edge,      *sa_hwe_x_edge]
+    - [xenial,     amd64,    ga-16.04,        generic,     linux-generic,                        *sa_hwe_x]
+    - [xenial,     amd64,    ga-16.04,        lowlatency,  linux-lowlatency,                     *sa_hwe_x]
+    - [xenial,     amd64,    hwe-16.04,       generic,     linux-generic-hwe-16.04,              *sa_hwe_x]
+    - [xenial,     amd64,    hwe-16.04,       lowlatency,  linux-lowlatency-hwe-16.04,           *sa_hwe_x]
+    - [xenial,     amd64,    hwe-16.04-edge,  generic,     linux-generic-hwe-16.04-edge,         *sa_hwe_x_edge]
+    - [xenial,     amd64,    hwe-16.04-edge,  lowlatency,  linux-lowlatency-hwe-16.04-edge,      *sa_hwe_x_edge]
     - [xenial,     arm64,    ga-16.04,        generic,     linux-generic,                        *sa_hwe_x]
     - [xenial,     arm64,    hwe-16.04,       generic,     linux-generic-hwe-16.04,              *sa_hwe_x]
     - [xenial,     arm64,    hwe-16.04-edge,  generic,     linux-generic-hwe-16.04-edge,         *sa_hwe_x_edge]
@@ -170,28 +170,28 @@ releases:
     - [trusty,  armhf,   hwe-t,     generic,    linux-generic,                     *arm_hwe_t]
     - [trusty,  armhf,   *glpae,    *glpae,     linux-generic-lpae,                [*glpae]]
     - [trusty,  i386,    hwe-t,     generic,    linux-generic,                     *sa_hwe_t]
-    - [trusty,  amd64,   hwe-t,     generic,    linux-signed-generic,              *sa_hwe_t]
+    - [trusty,  amd64,   hwe-t,     generic,    linux-generic,              *sa_hwe_t]
     - [trusty,  ppc64el, hwe-t,     generic,    linux-generic,                     *sa_hwe_t]
     - [trusty,  arm64,   hwe-t,     generic,    linux-generic,                     *sa_hwe_t]
     - [trusty,  arm64,   *xguboot,  generic,    linux-generic,                     [*xguboot], *kh-xgene]
     - [trusty,  arm64,   *mustang,  generic,    linux-generic,                     [*mustang], *kh-mustang]
-    - [utopic,  amd64,   hwe-u,     generic,    linux-signed-generic-lts-utopic,   *sa_hwe_u]
+    - [utopic,  amd64,   hwe-u,     generic,    linux-generic-lts-utopic,   *sa_hwe_u]
     - [utopic,  arm64,   hwe-u,     generic,    linux-generic-lts-utopic,          *sa_hwe_u]
     - [utopic,  armhf,   hwe-u,     generic,    linux-generic-lts-utopic,          *sa_hwe_u]
     - [utopic,  i386,    hwe-u,     generic,    linux-generic-lts-utopic,          *sa_hwe_u]
     - [utopic,  ppc64el, hwe-u,     generic,    linux-generic-lts-utopic,          *sa_hwe_u]
-    - [vivid,   amd64,   hwe-v,     generic,    linux-signed-generic-lts-vivid,    *sa_hwe_v]
+    - [vivid,   amd64,   hwe-v,     generic,    linux-generic-lts-vivid,    *sa_hwe_v]
     - [vivid,   arm64,   hwe-v,     generic,    linux-generic-lts-vivid,           *sa_hwe_v]
     - [vivid,   armhf,   hwe-v,     generic,    linux-generic-lts-vivid,           *sa_hwe_v]
     - [vivid,   i386,    hwe-v,     generic,    linux-generic-lts-vivid,           *sa_hwe_v]
     - [vivid,   ppc64el, hwe-v,     generic,    linux-generic-lts-vivid,           *sa_hwe_v]
-    - [wily,    amd64,   hwe-w,     generic,    linux-signed-generic-lts-wily,     *sa_hwe_w]
+    - [wily,    amd64,   hwe-w,     generic,    linux-generic-lts-wily,     *sa_hwe_w]
     - [wily,    arm64,   hwe-w,     generic,    linux-generic-lts-wily,            *sa_hwe_w]
     - [wily,    armhf,   hwe-w,     generic,    linux-generic-lts-wily,            *sa_hwe_w]
     - [wily,    i386,    hwe-w,     generic,    linux-generic-lts-wily,            *sa_hwe_w]
     - [wily,    ppc64el, hwe-w,     generic,    linux-generic-lts-wily,            *sa_hwe_w]
-    - [xenial,  amd64,   hwe-x,     generic,    linux-signed-generic-lts-xenial,   *sa_hwe_x_legacy]
-    - [xenial,  amd64,   hwe-x,     lowlatency, linux-signed-lowlatency-lts-xenial, *sa_hwe_x_legacy]
+    - [xenial,  amd64,   hwe-x,     generic,    linux-generic-lts-xenial,   *sa_hwe_x_legacy]
+    - [xenial,  amd64,   hwe-x,     lowlatency, linux-lowlatency-lts-xenial, *sa_hwe_x_legacy]
     - [xenial,  arm64,   hwe-x,     generic,    linux-generic-lts-xenial,          *sa_hwe_x_legacy]
     - [xenial,  armhf,   hwe-x,     generic,    linux-generic-lts-xenial,          *sa_hwe_x_legacy]
     - [xenial,  i386,    hwe-x,     generic,    linux-generic-lts-xenial,          *sa_hwe_x_legacy]
