--- a/conf/meph-v2.yaml
+++ b/conf/meph-v2.yaml
@@ -55,19 +55,19 @@ releases:
  - version: "20.04"
    release: focal
    kernels:
-    - [focal,    amd64,   hwe-f,    generic,   linux-signed-generic,     *sa_hwe_f]
-    - [focal,    arm64,   hwe-f,    generic,   linux-generic,            *sa_hwe_f]
-    - [focal,    arm64,   *mustang, generic,   linux-generic,            [*mustang], *kh-mustang]
-    - [focal,    arm64,   *xguboot, generic,   linux-generic,            [*xguboot], *kh-xgene]
-    - [focal,    armhf,   *glpae,   *glpae,    linux-generic-lpae,       [*glpae]]
-    - [focal,    armhf,   hwe-f,    generic,   linux-generic,            *arm_hwe_f]
-    - [focal,    i386,    hwe-f,    generic,   linux-generic,            *sa_hwe_f]
-    - [focal,    ppc64el, hwe-f,    generic,   linux-generic,            *sa_hwe_f]
-    - [focal,    s390x,   hwe-f,    generic,   linux-generic,            *sa_hwe_f]
+    - [focal,    amd64,   hwe-f,    generic,   linux-generic,           *sa_hwe_f]
+    - [focal,    arm64,   hwe-f,    generic,   linux-generic,           *sa_hwe_f]
+    - [focal,    arm64,   *mustang, generic,   linux-generic,           [*mustang], *kh-mustang]
+    - [focal,    arm64,   *xguboot, generic,   linux-generic,           [*xguboot], *kh-xgene]
+    - [focal,    armhf,   *glpae,   *glpae,    linux-generic-lpae,      [*glpae]]
+    - [focal,    armhf,   hwe-f,    generic,   linux-generic,           *arm_hwe_f]
+    - [focal,    i386,    hwe-f,    generic,   linux-generic,           *sa_hwe_f]
+    - [focal,    ppc64el, hwe-f,    generic,   linux-generic,           *sa_hwe_f]
+    - [focal,    s390x,   hwe-f,    generic,   linux-generic,           *sa_hwe_f]
  - version: "19.10"
    release: eoan
    kernels:
-    - [eoan,    amd64,   hwe-e,    generic,   linux-signed-generic,     *sa_hwe_e]
+    - [eoan,    amd64,   hwe-e,    generic,   linux-generic,            *sa_hwe_e]
     - [eoan,    arm64,   hwe-e,    generic,   linux-generic,            *sa_hwe_e]
     - [eoan,    arm64,   *mustang, generic,   linux-generic,            [*mustang], *kh-mustang]
     - [eoan,    arm64,   *xguboot, generic,   linux-generic,            [*xguboot], *kh-xgene]
@@ -79,7 +79,7 @@ releases:
  - version: "19.04"
    release: disco
    kernels:
-    - [disco,   amd64,   hwe-d,    generic,   linux-signed-generic,     *sa_hwe_d]
+    - [disco,   amd64,   hwe-d,    generic,   linux-generic,            *sa_hwe_d]
     - [disco,   arm64,   hwe-d,    generic,   linux-generic,            *sa_hwe_d]
     - [disco,   arm64,   *mustang, generic,   linux-generic,            [*mustang], *kh-mustang]
     - [disco,   arm64,   *xguboot, generic,   linux-generic,            [*xguboot], *kh-xgene]
@@ -91,7 +91,7 @@ releases:
  - version: "18.04"
    release: bionic
    kernels:
-    - [bionic,  amd64,   hwe-b,    generic,   linux-signed-generic,     *sa_hwe_b]
+    - [bionic,  amd64,   hwe-b,    generic,   linux-generic,            *sa_hwe_b]
     - [bionic,  arm64,   hwe-b,    generic,   linux-generic,            *sa_hwe_b]
     - [bionic,  arm64,   *mustang, generic,   linux-generic,            [*mustang], *kh-mustang]
     - [bionic,  arm64,   *xguboot, generic,   linux-generic,            [*xguboot], *kh-xgene]
@@ -103,7 +103,7 @@ releases:
  - version: "16.04"
    release: xenial
    kernels:
-    - [xenial,  amd64,   hwe-x,    generic,   linux-signed-generic,     *sa_hwe_x]
+    - [xenial,  amd64,   hwe-x,    generic,   linux-generic,            *sa_hwe_x]
     - [xenial,  arm64,   hwe-x,    generic,   linux-generic,            *sa_hwe_x]
     - [xenial,  arm64,   *mustang, generic,   linux-generic,            [*mustang], *kh-mustang]
     - [xenial,  arm64,   *xguboot, generic,   linux-generic,            [*xguboot], *kh-xgene]
@@ -116,30 +116,30 @@ releases:
    builtin_kernel: linux-generic
    release: trusty
    kernels:
-    - [trusty,  armhf,   hwe-t,    generic,   linux-generic,            *arm_hwe_t]
-    - [trusty,  armhf,   *glpae,   *glpae,    linux-generic-lpae,       [*glpae]]
-    - [trusty,  i386,    hwe-t,    generic,   linux-generic,            *sa_hwe_t]
-    - [trusty,  amd64,   hwe-t,    generic,   linux-signed-generic,     *sa_hwe_t]
-    - [trusty,  ppc64el, hwe-t,    generic,   linux-generic,            *sa_hwe_t]
-    - [trusty,  arm64,   hwe-t,    generic,   linux-generic,            *sa_hwe_t]
-    - [trusty,  arm64,   *xguboot, generic,   linux-generic,            [*xguboot], *kh-xgene]
-    - [trusty,  arm64,   *mustang, generic,   linux-generic,            [*mustang], *kh-mustang]
-    - [utopic,  amd64,   hwe-u,    generic,  linux-signed-generic-lts-utopic,  *sa_hwe_u]
+    - [trusty,  armhf,   hwe-t,    generic,  linux-generic,             *arm_hwe_t]
+    - [trusty,  armhf,   *glpae,   *glpae,   linux-generic-lpae,        [*glpae]]
+    - [trusty,  i386,    hwe-t,    generic,  linux-generic,             *sa_hwe_t]
+    - [trusty,  amd64,   hwe-t,    generic,  linux-generic,             *sa_hwe_t]
+    - [trusty,  ppc64el, hwe-t,    generic,  linux-generic,             *sa_hwe_t]
+    - [trusty,  arm64,   hwe-t,    generic,  linux-generic,             *sa_hwe_t]
+    - [trusty,  arm64,   *xguboot, generic,  linux-generic,             [*xguboot], *kh-xgene]
+    - [trusty,  arm64,   *mustang, generic,  linux-generic,             [*mustang], *kh-mustang]
+    - [utopic,  amd64,   hwe-u,    generic,  linux-generic-lts-utopic,  *sa_hwe_u]
     - [utopic,  arm64,   hwe-u,    generic,  linux-generic-lts-utopic,  *sa_hwe_u]
     - [utopic,  armhf,   hwe-u,    generic,  linux-generic-lts-utopic,  *sa_hwe_u]
     - [utopic,  i386,    hwe-u,    generic,  linux-generic-lts-utopic,  *sa_hwe_u]
     - [utopic,  ppc64el, hwe-u,    generic,  linux-generic-lts-utopic,  *sa_hwe_u]
-    - [vivid,   amd64,   hwe-v,    generic,  linux-signed-generic-lts-vivid,   *sa_hwe_v]
+    - [vivid,   amd64,   hwe-v,    generic,  linux-generic-lts-vivid,   *sa_hwe_v]
     - [vivid,   arm64,   hwe-v,    generic,  linux-generic-lts-vivid,   *sa_hwe_v]
     - [vivid,   armhf,   hwe-v,    generic,  linux-generic-lts-vivid,   *sa_hwe_v]
     - [vivid,   i386,    hwe-v,    generic,  linux-generic-lts-vivid,   *sa_hwe_v]
     - [vivid,   ppc64el, hwe-v,    generic,  linux-generic-lts-vivid,   *sa_hwe_v]
-    - [wily,    amd64,   hwe-w,    generic,  linux-signed-generic-lts-wily,    *sa_hwe_w]
+    - [wily,    amd64,   hwe-w,    generic,  linux-generic-lts-wily,    *sa_hwe_w]
     - [wily,    arm64,   hwe-w,    generic,  linux-generic-lts-wily,    *sa_hwe_w]
     - [wily,    armhf,   hwe-w,    generic,  linux-generic-lts-wily,    *sa_hwe_w]
     - [wily,    i386,    hwe-w,    generic,  linux-generic-lts-wily,    *sa_hwe_w]
     - [wily,    ppc64el, hwe-w,    generic,  linux-generic-lts-wily,    *sa_hwe_w]
-    - [xenial,  amd64,   hwe-x,    generic,  linux-signed-generic-lts-xenial,  *sa_hwe_x]
+    - [xenial,  amd64,   hwe-x,    generic,  linux-generic-lts-xenial,  *sa_hwe_x]
     - [xenial,  arm64,   hwe-x,    generic,  linux-generic-lts-xenial,  *sa_hwe_x]
     - [xenial,  armhf,   hwe-x,    generic,  linux-generic-lts-xenial,  *sa_hwe_x]
     - [xenial,  i386,    hwe-x,    generic,  linux-generic-lts-xenial,  *sa_hwe_x]
