--- a/conf/release-notifications.yaml
+++ b/conf/release-notifications.yaml
@@ -1,8 +1,7 @@
+product_id: "com.ubuntu.maas:candidate:1:maas-notification"
 content_id: "com.ubuntu.maas:candidate:1:maas-notification"
 
-release-notifications:
- - version: 1.0
-   maas_version: 2.8
-   message: >
-     <strong>We’ve released MAAS 2.8.</strong> This version supports LXD VM hosts, faster UI and many bug fixes.
-     Find out <a href="/docs/release-notes">what’s new in 2.8</a>.
+release-notification:
+  version: 1.0
+  maas_version: 2.8
+  message: release-notifications/message.html
