--- a/conf/release-notifications.yaml
+++ b/conf/release-notifications.yaml
@@ -4,4 +4,6 @@ content_id: "com.ubuntu.maas:candidate:1:maas-notification"
 release-notification:
   version: 1.0
   maas_version: 2.8
-  message: release-notifications/message.html
+  message: >
+    <strong>We’ve released MAAS 2.8.</strong> This version supports LXD VM hosts, faster UI and many bug fixes.
+    Find out <a href="/docs/release-notes">what’s new in 2.8</a>.
