--- a/tox.ini
+++ b/tox.ini
@@ -4,10 +4,10 @@ recreate = False
 
 [testenv]
 basepython=python3
+sitepackages=true
 deps =
      git+https://git.launchpad.net/simplestreams
      pyyaml
-     distro_info
 
 setenv =
     LC_ALL = C
