--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
 [submodule "packer-maas"]
 	path = packer-maas
-	url = git@github.com:canonical/packer-maas.git
+	url = https://github.com/canonical/packer-maas.git
 	branch = master
