Test deleting a product

--- a/conf/cpc-patch.yaml
+++ b/conf/cpc-patch.yaml
@@ -1,2 +1,6 @@
 # This patch is run nightly by CPC.
 
+com.ubuntu.maas:v3:download.json:
+  com.ubuntu.maas:v3:boot:19.04:.*:
+    labels:
+      - candidate
