Add support for Ubuntu 21.04, Hisute Hippo

--- a/conf/meph-v3.yaml
+++ b/conf/meph-v3.yaml
@@ -33,6 +33,7 @@ subarches:
  - &sa_hwe_ee       [generic,           hwe-p, hwe-q, hwe-r, hwe-s, hwe-t, hwe-u, hwe-v, hwe-w, ga-16.04, ga-16.10, ga-17.04, ga-17.10, ga-18.04, ga-18.10, ga-19.04, ga-19.10]
  - &sa_hwe_ff       [generic,           hwe-p, hwe-q, hwe-r, hwe-s, hwe-t, hwe-u, hwe-v, hwe-w, ga-16.04, ga-16.10, ga-17.04, ga-17.10, ga-18.04, ga-18.10, ga-19.04, ga-19.10, ga-20.04]
  - &sa_hwe_gg       [generic,           hwe-p, hwe-q, hwe-r, hwe-s, hwe-t, hwe-u, hwe-v, hwe-w, ga-16.04, ga-16.10, ga-17.04, ga-17.10, ga-18.04, ga-18.10, ga-19.04, ga-19.10, ga-20.04, ga-20.10]
+ - &sa_hwe_hh       [generic,           hwe-p, hwe-q, hwe-r, hwe-s, hwe-t, hwe-u, hwe-v, hwe-w, ga-16.04, ga-16.10, ga-17.04, ga-17.10, ga-18.04, ga-18.10, ga-19.04, ga-19.10, ga-20.04, ga-20.10, ga-21.04]
  - &arm_hwe_t       [generic, highbank, hwe-p, hwe-q, hwe-r, hwe-s, hwe-t]
  - &arm_hwe_u       [generic, highbank, hwe-p, hwe-q, hwe-r, hwe-s, hwe-t, hwe-u]
  - &arm_hwe_v       [generic, highbank, hwe-p, hwe-q, hwe-r, hwe-s, hwe-t, hwe-u, hwe-v]
@@ -45,6 +46,7 @@ subarches:
  - &arm_hwe_ee      [generic, highbank, hwe-p, hwe-q, hwe-r, hwe-s, hwe-t, hwe-u, hwe-v, hwe-w, ga-16.04, ga-16.10, ga-17.04, ga-17.10, ga-18.04, ga-18.10, ga-19.04, ga-19.10]
  - &arm_hwe_ff      [generic, highbank, hwe-p, hwe-q, hwe-r, hwe-s, hwe-t, hwe-u, hwe-v, hwe-w, ga-16.04, ga-16.10, ga-17.04, ga-17.10, ga-18.04, ga-18.10, ga-19.04, ga-19.10, ga-20.04]
  - &arm_hwe_gg      [generic, highbank, hwe-p, hwe-q, hwe-r, hwe-s, hwe-t, hwe-u, hwe-v, hwe-w, ga-16.04, ga-16.10, ga-17.04, ga-17.10, ga-18.04, ga-18.10, ga-19.04, ga-19.10, ga-20.04, ga-20.10]
+ - &arm_hwe_hh      [generic, highbank, hwe-p, hwe-q, hwe-r, hwe-s, hwe-t, hwe-u, hwe-v, hwe-w, ga-16.04, ga-16.10, ga-17.04, ga-17.10, ga-18.04, ga-18.10, ga-19.04, ga-19.10, ga-20.04, ga-20.10, ga-21.04]
 
 misc:
  - &glpae generic-lpae
@@ -55,6 +57,20 @@ misc:
  - &kh-xgene   {suffix: .xgene, kihelper: "kh-xgene", di-format: 'xgene'}
 
 releases:
+ - version: "21.04"
+   release: hirsute
+   kernels:
+    - [hirsute,       amd64,    ga-21.04,        generic,     linux-generic,                        *sa_hwe_hh]
+    - [hirsute,       amd64,    ga-21.04,        lowlatency,  linux-image-lowlatency,               *sa_hwe_hh]
+    - [hirsute,       arm64,    ga-21.04,        generic,     linux-generic,                        *sa_hwe_hh]
+    - [hirsute,       arm64,    *mustang,        generic,     linux-generic,                        [*mustang], *kh-mustang]
+    - [hirsute,       arm64,    *xguboot,        generic,     linux-generic,                        [*xguboot], *kh-xgene]
+    - [hirsute,       armhf,    *glpae,          *glpae,      linux-generic-lpae,                   [*glpae]]
+    - [hirsute,       armhf,    ga-21.04,        generic,     linux-generic,                        *arm_hwe_hh]
+    - [hirsute,       i386,     ga-21.04,        generic,     linux-generic,                        *sa_hwe_hh]
+    - [hirsute,       i386,     ga-21.04,        lowlatency,  linux-image-lowlatency,               *sa_hwe_hh]
+    - [hirsute,       ppc64el,  ga-21.04,        generic,     linux-generic,                        *sa_hwe_hh]
+    - [hirsute,       s390x,    ga-21.04,        generic,     linux-generic,                        *sa_hwe_hh]
  - version: "20.10"
    release: groovy
    kernels:
