Add HWE for focal

--- a/conf/meph-v3.yaml
+++ b/conf/meph-v3.yaml
@@ -88,17 +88,33 @@ releases:
  - version: "20.04"
    release: focal
    kernels:
-    - [focal,       amd64,    ga-20.04,        generic,     linux-generic,                        *sa_hwe_ff]
-    - [focal,       amd64,    ga-20.04,        lowlatency,  linux-image-lowlatency,               *sa_hwe_ff]
-    - [focal,       arm64,    ga-20.04,        generic,     linux-generic,                        *sa_hwe_ff]
-    - [focal,       arm64,    *mustang,        generic,     linux-generic,                        [*mustang], *kh-mustang]
-    - [focal,       arm64,    *xguboot,        generic,     linux-generic,                        [*xguboot], *kh-xgene]
-    - [focal,       armhf,    *glpae,          *glpae,      linux-generic-lpae,                   [*glpae]]
-    - [focal,       armhf,    ga-20.04,        generic,     linux-generic,                        *arm_hwe_ff]
-    - [focal,       i386,     ga-20.04,        generic,     linux-generic,                        *sa_hwe_ff]
-    - [focal,       i386,     ga-20.04,        lowlatency,  linux-image-lowlatency,               *sa_hwe_ff]
-    - [focal,       ppc64el,  ga-20.04,        generic,     linux-generic,                        *sa_hwe_ff]
-    - [focal,       s390x,    ga-20.04,        generic,     linux-generic,                        *sa_hwe_ff]
+    - [focal,     amd64,    ga-20.04,        generic,     linux-generic,                        *sa_hwe_ff]
+    - [focal,     amd64,    ga-20.04,        lowlatency,  linux-image-lowlatency,               *sa_hwe_ff]
+    - [focal,     amd64,    hwe-20.04,       generic,     linux-generic-hwe-20.04,              *sa_hwe_b]
+    - [focal,     amd64,    hwe-20.04,       lowlatency,  linux-lowlatency-hwe-20.04,           *sa_hwe_b]
+    - [focal,     amd64,    hwe-20.04-edge,  generic,     linux-generic-hwe-20.04-edge,         *sa_hwe_b_edge]
+    - [focal,     amd64,    hwe-20.04-edge,  lowlatency,  linux-lowlatency-hwe-20.04-edge,      *sa_hwe_b_edge]
+    - [focal,     arm64,    ga-20.04,        generic,     linux-generic,                        *sa_hwe_ff]
+    - [focal,     arm64,    hwe-20.04,       generic,     linux-generic-hwe-20.04,              *sa_hwe_b]
+    - [focal,     arm64,    hwe-20.04-edge,  generic,     linux-generic-hwe-20.04-edge,         *sa_hwe_b_edge]
+    - [focal,     arm64,    *mustang,        generic,     linux-generic,                        [*mustang], *kh-mustang]
+    - [focal,     arm64,    *xguboot,        generic,     linux-generic,                        [*xguboot], *kh-xgene]
+    - [focal,     armhf,    *glpae,          *glpae,      linux-generic-lpae,                   [*glpae]]
+    - [focal,     armhf,    ga-20.04,        generic,     linux-generic,                        *arm_hwe_ff]
+    - [focal,     armhf,    hwe-20.04,       generic,     linux-generic-hwe-20.04,              *arm_hwe_b]
+    - [focal,     armhf,    hwe-20.04-edge,  generic,     linux-generic-hwe-20.04-edge,         *arm_hwe_b_edge]
+    - [focal,     i386,     ga-20.04,        generic,     linux-generic,                        *sa_hwe_ff]
+    - [focal,     i386,     ga-20.04,        lowlatency,  linux-image-lowlatency,               *sa_hwe_ff]
+    - [focal,     i386,     hwe-20.04,       generic,     linux-generic-hwe-20.04,              *sa_hwe_b]
+    - [focal,     i386,     hwe-20.04,       lowlatency,  linux-lowlatency-hwe-20.04,           *sa_hwe_b]
+    - [focal,     i386,     hwe-20.04-edge,  generic,     linux-generic-hwe-20.04-edge,         *sa_hwe_b_edge]
+    - [focal,     i386,     hwe-20.04-edge,  lowlatency,  linux-lowlatency-hwe-20.04-edge,      *sa_hwe_b_edge]
+    - [focal,     ppc64el,  ga-20.04,        generic,     linux-generic,                        *sa_hwe_ff]
+    - [focal,     ppc64el,  hwe-20.04,       generic,     linux-generic-hwe-20.04,              *sa_hwe_b]
+    - [focal,     ppc64el,  hwe-20.04-edge,  generic,     linux-generic-hwe-20.04-edge,         *sa_hwe_b_edge]
+    - [focal,     s390x,    ga-20.04,        generic,     linux-generic,                        *sa_hwe_ff]
+    - [focal,     s390x,    hwe-20.04,       generic,     linux-generic-hwe-20.04,              *sa_hwe_b]
+    - [focal,     s390x,    hwe-20.04-edge,  generic,     linux-generic-hwe-20.04-edge,         *sa_hwe_b_edge]
  - version: "18.04"
    release: bionic
    kernels:
