--- a/conf/release-notifications.yaml
+++ b/conf/release-notifications.yaml
@@ -3,7 +3,6 @@ content_id: "com.ubuntu.maas:candidate:1:maas-notification"
 
 release-notification:
   version: 1.0
-  maas_version: "2.8.0"
+  maas_version: "2.9.0"
   message: >
-    <strong>We’ve released MAAS 2.8.</strong> This version supports LXD VM hosts, faster UI and many bug fixes.
-    Find out <a href="https://maas.io/docs/release-notes">what’s new in 2.8</a>.
+    <strong>MAAS 2.9 has been released</strong>. Find out <a href="https://maas.io/docs/release-notes">what’s new in 2.9</a>
