Downgrade AMD64 GRUB back to Bionic.
As reported in LP: #1915288 AMD64 GRUB fails to network boot on UEFI OVMF
when using a VirtIO NIC. This causes LXD VM hosts to fail.

--- a/conf/bootloaders.yaml
+++ b/conf/bootloaders.yaml
@@ -26,7 +26,7 @@ bootloaders:
    arch: amd64
    arches: amd64
    archive: http://archive.ubuntu.com/ubuntu
-   release: focal
+   release: bionic
    os: grub-efi-signed
    files:
     - usr/lib/shim/shimx64.efi.signed, bootx64.efi
